--- a/webpage/index.html
+++ b/webpage/index.html
@@ -4,13 +4,28 @@
 <head>
     <meta charset="utf-8">
     <title>code.ch</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link href="index.css" rel="stylesheet">
+    <script src="index.js"></script>
 </head>
 
 <body>
     <div></div>
+    <form action="/chat" method="post">
+        <input type="text" id="nickname" name="nickname">
+        <input type="submit" id="submit-button" value="進入聊天室">
+    </form>
 
+    <div class="no-display">
+        <form action="/user/reg" method="post">
+            <input type="text" name="nickname">
+            <input type="submit">
+        </form>
+    </div>
 </body>
 
 </html>
