--- a/backend/static/chat.html
+++ b/backend/static/chat.html
@@ -9,15 +9,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="chat.js"></script>
 </head>
 
 <body>
     <div id="message-box"></div>
 
     <div>
-        <form id="form">
-            <input type="text" name="message" id="form-message">
-        </form>
+        <input type="text" name="message" id="message-input">
         <button type="button" class="btn btn-outline-primary" id="send-button">傳送</button>
     </div>
 </body>
