beautify index.html; ES6

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mongo Ch.</title>
+  <title>Mongo Ch.</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -14,9 +14,13 @@
 </head>
 
 <body>
-  <div></div>
-  <input type="text" id="nickname">
-  <button type="button" class="btn btn-outline-primary" id="submit-button">進入聊天室</button>
+  <div class="vertical-center">
+    <h1 class="title">Mongo Ch.</h1>
+    <div class="input-group input-group-lg container">
+      <input type="text" class="form-control" id="nickname" placeholder="Nickname">
+      <button type="button" class="btn btn-success" id="submit-button">進入聊天室&rArr;</button>
+    </div>
+  </div>
 </body>
 
 </html>
