--- a/backend/static/chat.html
+++ b/backend/static/chat.html
@@ -9,15 +9,16 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <link href="chat.css" rel="stylesheet">
   <script src="chat.js"></script>
 </head>
 
 <body>
-  <div id="message-box"></div>
+  <div class="container" id="message-box"></div>
 
-  <div>
+  <div class="input-group input-group-lg container">
     <input type="text" name="message" id="message-input">
-    <button type="button" class="btn btn-outline-primary" id="send-button">傳送</button>
+    <button type="button" class="btn btn-primary" id="send-button" disabled>傳送</button>
   </div>
 </body>
 
