check if user name or message string is empty string

--- a/backend/static/chat.html
+++ b/backend/static/chat.html
@@ -15,11 +15,12 @@
 </head>
 
 <body>
-  <div class="container" id="message-box"></div>
-
-  <div class="input-group input-group-lg container">
-    <input type="text" name="message" id="message-input">
-    <button type="button" class="btn btn-primary" id="send-button" disabled>傳送</button>
+  <div class="container-fluid">
+    <div class="container" id="message-box"></div>
+    <div class="input-group input-group-lg container">
+      <input type="text" name="message" id="message-input">
+      <button type="button" class="btn btn-primary" id="send-button" disabled>傳送</button>
+    </div>
   </div>
 </body>
 
