--- a/mongoch/static/chat.html
+++ b/mongoch/static/chat.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid" id="message-bg">
     <div class="container" id="message-box"></div>
-    <div class="input-group input-group-lg container">
-      <input type="text" name="message" id="message-input">
+    <div class="input-group input-group-lg container" id="input-div">
+      <input type="text" class="form-control" name="message" id="message-input">
       <button type="button" class="btn btn-primary" id="send-button" disabled>傳送</button>
     </div>
   </div>
