--- a/mongoch/static/chat.html
+++ b/mongoch/static/chat.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+  <head>
+    <meta charset="utf-8" />
+    <title>Mongo Ch.</title>
+    <link rel="icon" href="imgs/favicon.ico" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <link href="chat.css" rel="stylesheet" />
+    <script src="chat.js"></script>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Mongo Ch.</title>
-  <link rel="icon" href="imgs/favicon.ico">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <link href="chat.css" rel="stylesheet">
-  <script src="chat.js"></script>
-</head>
-
-<body>
-  <div class="container-fluid" id="message-bg">
-    <div class="container" id="message-box"></div>
-    <div class="input-group input-group-lg container" id="input-div">
-      <input type="text" class="form-control" name="message" id="message-input">
-      <button type="button" class="btn btn-primary" id="send-button" disabled>傳送</button>
+  <body>
+    <div class="container-fluid" id="message-bg">
+      <div class="container" id="message-box"></div>
+      <div class="input-group input-group-lg container" id="input-div">
+        <input
+          type="text"
+          class="form-control"
+          name="message"
+          id="message-input"
+        />
+        <button type="button" class="btn btn-primary" id="send-button" disabled>
+          傳送
+        </button>
+      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
