display message time

--- a/mongoch/static/chat.html
+++ b/mongoch/static/chat.html
@@ -24,12 +24,7 @@
   <div class="container-fluid" id="message-bg">
     <div class="container" id="message-box"></div>
     <div class="input-group input-group-lg container" id="input-div">
-      <input
-        type="text"
-        class="form-control"
-        name="message"
-        id="message-input"
-      />
+      <input class="form-control text-wrap" id="message-input"></input>
       <button type="button" class="btn btn-primary" id="send-button" disabled>
         傳送
       </button>
