--- a/mongoch/static/chat.html
+++ b/mongoch/static/chat.html
@@ -24,7 +24,7 @@
   <div class="container-fluid" id="message-bg">
     <div class="container" id="message-box"></div>
     <div class="input-group input-group-lg container" id="input-div">
-      <input class="form-control text-wrap" id="message-input"></input>
+      <textarea class="form-control text-wrap" id="message-input"></textarea>
       <button type="button" class="btn btn-primary" id="send-button" disabled>
         傳送
       </button>
