--- a/mongoch/static/chat.html
+++ b/mongoch/static/chat.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-  <head>
-    <meta charset="utf-8" />
-    <title>Mongo Ch.</title>
-    <link rel="icon" href="imgs/favicon.ico" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <link href="chat.css" rel="stylesheet" />
-    <script src="chat.js"></script>
-  
+
+<head>
+  <meta charset="utf-8" />
+  <title>Mongo Ch.</title>
+  <link rel="icon" href="imgs/favicon.ico" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <link href="chat.css" rel="stylesheet" />
+  <script src="chat.js"></script>
+
 </head>
 
 <body>
@@ -25,9 +20,22 @@
     <div class="container" id="message-box"></div>
     <div class="input-group input-group-lg container" id="input-div">
       <textarea class="form-control text-wrap" id="message-input"></textarea>
-      <button type="button" class="btn btn-primary" id="send-button" disabled>
-        傳送
+      <button type="button" class="btn btn-info" id="send-button" disabled>
+        <img src="svg/send.svg" style="height: 35px" />
       </button>
     </div>
-  </body>
+    <div class="container" id="info-page">
+      <button id="close" class="btn btn-lg"
+        onclick="document.getElementById('info-page').style.display = 'none';">X</button>
+      <h3 id="nickname-show">暱稱:</h3>
+      <h3 id="id-show">ID:</h3>
+      <h3 id="msg-count">發送訊息總數:</h3>
+      <h3 id="char-count">發送訊息總字元數:</h3>
+      <h3 id="avg-len">平均每則訊息字元數:</h3>
+    </div>
+    <input type="image" src="svg/person-circle.svg" id="personal-info" onclick="showInfoPage(getUserId());">
+  </div>
+  <p id="hint">Enter: 發送<br>Shift+Enter: 換行</p>
+</body>
+
 </html>
