improve some user experience

--- a/mongoch/static/chat.html
+++ b/mongoch/static/chat.html
@@ -35,7 +35,7 @@
     </div>
     <input type="image" src="svg/person-circle.svg" id="personal-info" onclick="showInfoPage(getUserId());">
   </div>
-  <p id="hint">Enter: 發送<br>Shift+Enter: 換行</p>
+  <p class="user-select-none" id="hint">Enter: 發送<br>Shift+Enter: 換行</p>
 </body>
 
 </html>
