--- a/mongoch/static/index.html
+++ b/mongoch/static/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <div class="vertical-center">
-    <h1 class="title">Mongo Ch.</h1>
+    <h1 class="title user-select-none">Mongo Ch.</h1>
     <div class="input-group input-group-lg container">
       <input type="text" class="form-control" id="nickname" placeholder="Nickname">
       <button type="button" class="btn btn-success" id="submit-button" disabled>進入聊天室&rArr;</button>
