--- a/mongoch/static/chat.html
+++ b/mongoch/static/chat.html
@@ -29,6 +29,7 @@
         onclick="document.getElementById('info-page').style.display = 'none';">X</button>
       <h3 id="nickname-show">暱稱:</h3>
       <h3 id="id-show">ID:</h3>
+      <h3 id="reg-time-show">註冊日期:</h3>
       <h3 id="msg-count">發送訊息總數:</h3>
       <h3 id="char-count">發送訊息總字元數:</h3>
       <h3 id="avg-len">平均每則訊息字元數:</h3>
